# docs/swagger.json
@@ -4,6 +4,35 @@
         "contact": {}
     },
     "paths": {
+        "/exists": {
+            "post": {
+                "consumes": [
+                    "text/plain"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Проверяет есть ли путь(файл/папка)",
+                "parameters": [
+                    {
+                        "description": "Путь до директории",
+                        "name": "path",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
         "/mkdir": {
             "post": {
                 "consumes": [
@@ -20,6 +49,35 @@
                         "in": "body",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/mv": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "summary": "Перемещает по указанному пути",
+                "parameters": [
+                    {
+                        "description": "Список файлов",
+                        "name": "files",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.FilesToMove"
                         }
                     }
                 ],
@@ -64,6 +122,35 @@
                     }
                 }
             }
+        },
+        "/rm": {
+            "post": {
+                "consumes": [
+                    "text/plain"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Удаляет папку/файл по переданному пути",
+                "parameters": [
+                    {
+                        "description": "Путь до директории",
+                        "name": "path",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -78,6 +165,20 @@
                 },
                 "path": {
                     "description": "Type string `json:\"type\"`",
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.FilesToMove": {
+            "type": "object",
+            "properties": {
+                "files": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "to": {
                     "type": "string"
                 }
             }
